[package]
name = "ash_starter"
version = "0.1.0"
authors = ["Bradley Lyman <lyman.brad3211@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
flexi_logger = "0.17.1"
log = "0.4.13"
ash = "0.31.0"
aquamarine = "*"
nalgebra = "*"
memoffset = "*"

[dependencies.glfw]
version = "0.41.0"
features = [ "vulkan" ]

[dependencies.textwrap]
features = ["terminal_size"]
version = "0.13.2"
